--- a/modules/400-descheduler/crds/deschedulers.yaml
+++ b/modules/400-descheduler/crds/deschedulers.yaml
@@ -88,6 +88,7 @@ spec:
                       description: List of strategies with corresponding parameters for a given Descheduler instances
                       properties:
                         highNodeUtilization:
+                          required: [enabled]
                           description: >
                             This strategy finds nodes that are over utilized and evicts pods from the nodes in the hope
                             that these pods will be scheduled compactly into fewer nodes.
@@ -149,6 +150,7 @@ spec:
                               type: boolean
                           type: object
                         lowNodeUtilization:
+                          required: [enabled]
                           description: >
                             This strategy finds nodes that are under utilized and evicts pods, if possible, from other nodes in the hope
                             that recreation of evicted pods will be scheduled on these underutilized nodes.
@@ -161,6 +163,7 @@ spec:
                             nodeFit: *node-fit
                           type: object
                         removeDuplicates:
+                          required: [enabled]
                           description: >
                             This strategy makes sure that there is only one pod associated with
                             a ReplicaSet (RS), ReplicationController (RC), StatefulSet, or Job running on the same node.
@@ -173,6 +176,7 @@ spec:
                             nodeFit: *node-fit
                           type: object
                         removeFailedPods:
+                          required: [enabled]
                           description: This strategy evicts pods that are in failed status phase.
                           properties:
                             enabled:
@@ -183,6 +187,7 @@ spec:
                             nodeFit: *node-fit
                           type: object
                         removePodsHavingTooManyRestarts:
+                          required: [enabled]
                           description: This strategy makes sure that pods having too many restarts are removed from nodes.
                           properties:
                             enabled:
@@ -193,6 +198,7 @@ spec:
                             nodeFit: *node-fit
                           type: object
                         removePodsViolatingInterPodAntiAffinity:
+                          required: [enabled]
                           description: This strategy makes sure that pods violating interpod anti-affinity are removed from nodes.
                           properties:
                             enabled:
@@ -203,6 +209,7 @@ spec:
                             nodeFit: *node-fit
                           type: object
                         removePodsViolatingNodeAffinity:
+                          required: [enabled]
                           description: This strategy makes sure all pods violating node affinity are eventually removed from nodes.
                           properties:
                             enabled:
@@ -213,6 +220,7 @@ spec:
                             nodeFit: *node-fit
                           type: object
                         removePodsViolatingNodeTaints:
+                          required: [enabled]
                           description: This strategy makes sure that pods violating NoSchedule taints on nodes are removed.
                           properties:
                             enabled:
@@ -223,6 +231,7 @@ spec:
                             nodeFit: *node-fit
                           type: object
                         removePodsViolatingTopologySpreadConstraint:
+                          required: [enabled]
                           description: This strategy makes sure that pods violating topology spread constraints are evicted from nodes.
                           properties:
                             enabled:
