--- a/modules/400-descheduler/templates/configmap.yaml
+++ b/modules/400-descheduler/templates/configmap.yaml
@@ -39,7 +39,7 @@ data:
     {{- $globalParameters | toYaml | nindent 4 }}
   {{- end }}
     strategies:
-  {{- if hasKey $strategies "removeDuplicates" }}
+  {{- if dig "removeDuplicates" "enabled" false $strategies }}
       "RemoveDuplicates":
         enabled: true
         params:
@@ -49,7 +49,7 @@ data:
         enabled: false
   {{- end }}
 
-  {{- if hasKey $strategies "removePodsViolatingNodeAffinity" }}
+  {{- if dig "removePodsViolatingNodeAffinity" "enabled" false $strategies }}
       "RemovePodsViolatingNodeAffinity":
         enabled: true
         params:
@@ -61,7 +61,7 @@ data:
         enabled: false
   {{- end }}
 
-  {{- if hasKey $strategies "removePodsViolatingInterPodAntiAffinity" }}
+  {{- if dig "removePodsViolatingInterPodAntiAffinity" "enabled" false $strategies }}
       "RemovePodsViolatingInterPodAntiAffinity":
         enabled: true
         params:
@@ -72,7 +72,7 @@ data:
   {{- end }}
 
 
-  {{- if hasKey $strategies "lowNodeUtilization" }}
+  {{- if dig "lowNodeUtilization" "enabled" false $strategies }}
       "LowNodeUtilization":
         enabled: true
         params:
@@ -91,7 +91,7 @@ data:
         enabled: false
   {{- end }}
 
-  {{- if hasKey $strategies "highNodeUtilization" }}
+  {{- if dig "highNodeUtilization" "enabled" false $strategies }}
       "HighNodeUtilization":
         enabled: true
         params:
@@ -105,7 +105,7 @@ data:
         enabled: false
   {{- end }}
 
-  {{- if hasKey $strategies "removePodsViolatingNodeTaints" }}
+  {{- if dig "removePodsViolatingNodeTaints" "enabled" false $strategies }}
       "RemovePodsViolatingNodeTaints":
         enabled: true
         params:
@@ -115,7 +115,7 @@ data:
         enabled: false
   {{- end }}
 
-  {{- if hasKey $strategies "removePodsViolatingTopologySpreadConstraint" }}
+  {{- if dig "removePodsViolatingTopologySpreadConstraint" "enabled" false $strategies }}
       "RemovePodsViolatingTopologySpreadConstraint":
         enabled: true
         params:
@@ -125,7 +125,7 @@ data:
         enabled: false
   {{- end }}
 
-  {{- if hasKey $strategies "removePodsHavingTooManyRestarts" }}
+  {{- if dig "removePodsHavingTooManyRestarts" "enabled" false $strategies }}
       "RemovePodsHavingTooManyRestarts":
         enabled: true
         params:
@@ -138,7 +138,7 @@ data:
         enabled: false
   {{- end }}
 
-  {{- if hasKey $strategies "podLifeTime" }}
+  {{- if dig "podLifeTime" "enabled" false $strategies }}
       "PodLifeTime":
         enabled: true
         params:
