--- a/modules/values-default.yaml
+++ b/modules/values-default.yaml
@@ -7,6 +7,7 @@ containerizedDataImporterEnabled: true
 controlPlaneManagerEnabled: true
 dashboardEnabled: true
 deckhouseConfigEnabled: true
+externalModuleManagerEnabled: true
 deckhouseEnabled: true
 deckhouseWebEnabled: true
 deschedulerEnabled: true
