--- a/modules/007-registrypackages/images/containerd-altlinux/werf.inc.yaml
+++ b/modules/007-registrypackages/images/containerd-altlinux/werf.inc.yaml
@@ -18,7 +18,7 @@ import:
   add: /
   to: /
   includePaths:
-  - containerd_amd64.deb
+  - containerd_amd64.rpm
   - install
   - uninstall
   before: setup
@@ -42,5 +42,5 @@ shell:
   setup:
   - DISTRO="$(awk -F "-" '{print $NF}' <<< "{{ $version | replace "=" "_" }}")"
   - VERSION="$(sed "s/-${DISTRO}//" <<< "{{ $version | replace "=" "_" }}")"
-  - curl -sfL http://ftp.altlinux.org/pub/distributions/ALTLinux/p10/branch/files/x86_64/RPMS/containerd-1.6.9-alt1.x86_64.rpm --output /containerd_amd64.deb #TODO123
+  - curl -sfL http://ftp.altlinux.org/pub/distributions/ALTLinux/p10/branch/files/x86_64/RPMS/containerd-1.6.9-alt1.x86_64.rpm --output /containerd_amd64.rpm #TODO123
 {{- end }}
