--- a/modules/300-prometheus/images/grafana-dashboard-provisioner/Dockerfile
+++ b/modules/300-prometheus/images/grafana-dashboard-provisioner/Dockerfile
@@ -1,7 +1,8 @@
 ARG BASE_SHELL_OPERATOR
 FROM $BASE_SHELL_OPERATOR
 COPY hooks/ /hooks
-RUN apk add --no-cache curl sqlite rsync && \
+RUN apk add --no-cache curl sqlite rsync python3 && \
   curl https://slugify.vercel.app/ > slugify && \
   chmod +x slugify && \
-  mv slugify /usr/local/bin/
+  mv slugify /usr/local/bin/ \
+ENTRYPOINT ["python3"]
