--- a/modules/300-prometheus/images/grafana-dashboard-provisioner/Dockerfile
+++ b/modules/300-prometheus/images/grafana-dashboard-provisioner/Dockerfile
@@ -4,5 +4,5 @@ COPY hooks/ /hooks
 RUN apk add --no-cache curl sqlite rsync python3 && \
   curl https://slugify.vercel.app/ > slugify && \
   chmod +x slugify && \
-  mv slugify /usr/local/bin/ \
+  mv slugify /usr/local/bin/
 ENTRYPOINT ["python3"]
