--- a/werf.yaml
+++ b/werf.yaml
@@ -180,7 +180,7 @@ docker:
 ---
 image: dev-prebuild
 fromImage: common-base
-fromCacheVersion: 2020-05-08.1
+fromCacheVersion: "2023-02-03"
 git:
 - add: /
   to: /deckhouse
