--- a/modules/462-loki/templates/configmap.yaml
+++ b/modules/462-loki/templates/configmap.yaml
@@ -13,7 +13,7 @@ data:
       http_listen_port: 3100
 
     limits_config:
-      retention_period: {{ .Values.loki.retentionPeriod | default 168 }}h
+      retention_period: {{ .Values.loki.retentionPeriodHours | default 168 }}h
 
     common:
       path_prefix: /loki
