--- a/modules/462-loki/openapi/config-values.yaml
+++ b/modules/462-loki/openapi/config-values.yaml
@@ -36,7 +36,7 @@ properties:
   tolerations:
     type: array
     description: |
-      The same as in the Pods' `spec.tolerations` parameter in Kubernetes;
+      The same as in the Pods' `spec.tolerations` parameter in Kubernetes.
 
       If the parameter is omitted or `false`, `tolerations` will be determined [automatically](https://deckhouse.io/documentation/v1/#advanced-scheduling).
     items:
