--- a/modules/300-prometheus/images/grafana-dashboard-provisioner/Dockerfile
+++ b/modules/300-prometheus/images/grafana-dashboard-provisioner/Dockerfile
@@ -1,6 +1,8 @@
-ARG BASE_PYTHON_ALPINE
-FROM $BASE_PYTHON_ALPINE
-COPY hooks/dashboard_provisioner.py /
-WORKDIR /
-RUN apk add --no-cache curl sqlite rsync python3 jq
-ENTRYPOINT ["python3", "/dashboard_provisioner.py"]
+ARG BASE_SHELL_OPERATOR
+FROM $BASE_SHELL_OPERATOR
+COPY hooks/ /hooks
+COPY requirements.txt /tmp/requirements.txt
+RUN apk add --no-cache curl sqlite rsync python3 py3-pip jq && \
+  pip3 install -r /tmp/requirements.txt && \
+  apk del py3-pip && \
+  rm -rf /var/cache/apk/*
