[linstor] Fix D8LinstorControllerTargetDown alert
Signed-off-by: Andrei Kvapil <kvapss@gmail.com>

--- a/modules/041-linstor/monitoring/prometheus-rules/linstor-controller.yaml
+++ b/modules/041-linstor/monitoring/prometheus-rules/linstor-controller.yaml
@@ -20,7 +20,7 @@
           2. Check the LINSTOR error reports: `kubectl exec -n d8-linstor deploy/linstor-controller -- linstor err list | grep 'C|linstor-controller'`
 
     - alert: D8LinstorControllerTargetDown
-      expr: max by (job) (up{job="linstor-controller"} == 0)
+      expr: max by (job) (up{job="linstor-controller"}) == 0
       for: 1m
       labels:
         severity_level: "6"
