--- a/modules/462-loki/openapi/config-values.yaml
+++ b/modules/462-loki/openapi/config-values.yaml
@@ -1,10 +1,16 @@
 type: object
 properties:
-  effectiveStorageClass:
-    oneOf:
-      - type: string
-      - type: boolean
-    x-doc-default: 'false'
+  storageClass:
+    type: string
+    x-examples: ["ceph-ssd", "false"]
+    description: |
+      The name of the StorageClass to use.
+
+      If omitted, the StorageClass of the existing Loki PVC is used. If there is no PVC yet, either `global.StorageClass` or `global.discovery.defaultStorageClass` is used, and if those are undefined, the emptyDir volume is used to store the data.
+
+      `storageClass: false` — forces the `emptyDir` usage. You will need to delete the old PVC and restart the Pod manually.
+
+      **CAUTION!** Setting this value to one that differs from the current one (in the existing PVC) will result in Loki volume reprovisioning and data loss.
   diskSizeGigabytes:
     type: integer
     description: |
