--- a/modules/462-loki/templates/statefulset.yaml
+++ b/modules/462-loki/templates/statefulset.yaml
@@ -56,6 +56,7 @@ spec:
       {{- include "helm_lib_module_pod_security_context_run_as_user_nobody_with_writable_fs" . | nindent 6 }}
       containers:
       - name: loki
+        {{- include "helm_lib_module_container_security_context_read_only_root_filesystem" . | nindent 8 }}
         image: {{ include "helm_lib_module_image" (list . "loki") }}
         command: [ '/usr/bin/loki', '-config.file=/etc/loki/config.yaml' ]
         volumeMounts:
@@ -89,7 +90,7 @@ spec:
         configMap:
           name: {{ .Chart.Name }}
           defaultMode: 0644
-{{- $storageClass := .Values.loki.effectiveStorageClass }}
+{{- $storageClass := .Values.loki.internal.effectiveStorageClass }}
 {{- if $storageClass }}
   volumeClaimTemplates:
   - metadata:
