--- a/modules/462-loki/templates/logshipper-log-destination.yaml
+++ b/modules/462-loki/templates/logshipper-log-destination.yaml
@@ -3,8 +3,7 @@ apiVersion: deckhouse.io/v1alpha1
 kind: ClusterLogDestination
 metadata:
   name: d8-{{ .Chart.Name }}
-  lables:
-    module: {{ .Chart.Name }}
+  {{- include "helm_lib_module_labels" (list . (dict "app" .Chart.Name)) | nindent 2 }}
 spec:
   type: Loki
   loki:
@@ -15,8 +14,7 @@ apiVersion: deckhouse.io/v1alpha1
 kind: ClusterLoggingConfig
 metadata:
   name: d8-namespaces-to-{{ .Chart.Name }}
-  lables:
-    module: {{ .Chart.Name }}
+  {{- include "helm_lib_module_labels" (list . (dict "app" .Chart.Name)) | nindent 2 }}
 spec:
   type: KubernetesPods
   kubernetesPods:
