--- a/.github/workflows/e2e-gcp.yml
+++ b/.github/workflows/e2e-gcp.yml
@@ -569,7 +569,7 @@ jobs:
             ${{ steps.setup.outputs.tmp-dir-path}}/*.tfstate
 
       - name: Save test results
-        if: always()
+        if: ${{ steps.setup.outputs.dhctl-log-file }}
         uses: actions/upload-artifact@v2
         with:
           name: test_output_gcp_docker_1_22
@@ -994,7 +994,7 @@ jobs:
             ${{ steps.setup.outputs.tmp-dir-path}}/*.tfstate
 
       - name: Save test results
-        if: always()
+        if: ${{ steps.setup.outputs.dhctl-log-file }}
         uses: actions/upload-artifact@v2
         with:
           name: test_output_gcp_docker_1_23
@@ -1419,7 +1419,7 @@ jobs:
             ${{ steps.setup.outputs.tmp-dir-path}}/*.tfstate
 
       - name: Save test results
-        if: always()
+        if: ${{ steps.setup.outputs.dhctl-log-file }}
         uses: actions/upload-artifact@v2
         with:
           name: test_output_gcp_docker_1_24
@@ -1844,7 +1844,7 @@ jobs:
             ${{ steps.setup.outputs.tmp-dir-path}}/*.tfstate
 
       - name: Save test results
-        if: always()
+        if: ${{ steps.setup.outputs.dhctl-log-file }}
         uses: actions/upload-artifact@v2
         with:
           name: test_output_gcp_docker_1_25
@@ -2269,7 +2269,7 @@ jobs:
             ${{ steps.setup.outputs.tmp-dir-path}}/*.tfstate
 
       - name: Save test results
-        if: always()
+        if: ${{ steps.setup.outputs.dhctl-log-file }}
         uses: actions/upload-artifact@v2
         with:
           name: test_output_gcp_docker_1_26
@@ -2694,7 +2694,7 @@ jobs:
             ${{ steps.setup.outputs.tmp-dir-path}}/*.tfstate
 
       - name: Save test results
-        if: always()
+        if: ${{ steps.setup.outputs.dhctl-log-file }}
         uses: actions/upload-artifact@v2
         with:
           name: test_output_gcp_containerd_1_22
@@ -3119,7 +3119,7 @@ jobs:
             ${{ steps.setup.outputs.tmp-dir-path}}/*.tfstate
 
       - name: Save test results
-        if: always()
+        if: ${{ steps.setup.outputs.dhctl-log-file }}
         uses: actions/upload-artifact@v2
         with:
           name: test_output_gcp_containerd_1_23
@@ -3544,7 +3544,7 @@ jobs:
             ${{ steps.setup.outputs.tmp-dir-path}}/*.tfstate
 
       - name: Save test results
-        if: always()
+        if: ${{ steps.setup.outputs.dhctl-log-file }}
         uses: actions/upload-artifact@v2
         with:
           name: test_output_gcp_containerd_1_24
@@ -3969,7 +3969,7 @@ jobs:
             ${{ steps.setup.outputs.tmp-dir-path}}/*.tfstate
 
       - name: Save test results
-        if: always()
+        if: ${{ steps.setup.outputs.dhctl-log-file }}
         uses: actions/upload-artifact@v2
         with:
           name: test_output_gcp_containerd_1_25
@@ -4394,7 +4394,7 @@ jobs:
             ${{ steps.setup.outputs.tmp-dir-path}}/*.tfstate
 
       - name: Save test results
-        if: always()
+        if: ${{ steps.setup.outputs.dhctl-log-file }}
         uses: actions/upload-artifact@v2
         with:
           name: test_output_gcp_containerd_1_26
