--- a/ee/modules/030-cloud-provider-openstack/images/cloud-controller-manager/werf.inc.yaml
+++ b/ee/modules/030-cloud-provider-openstack/images/cloud-controller-manager/werf.inc.yaml
@@ -49,6 +49,7 @@ shell:
   - cd /src
   - test -d /patches/{{ $version }} && for patchfile in /patches/{{ $version }}/*.patch ; do patch -p1 < ${patchfile}; done
   - export VERSION={{ $value.ccm.openstack }}
+  - export GIT_VERSION={{ $value.ccm.openstack }}
   - make openstack-cloud-controller-manager
   {{- end }}
 {{- end }}
