Apply suggestions from code review
Signed-off-by: Artem Kladov <6360800+z9r5@users.noreply.github.com>

--- a/modules/462-loki/openapi/doc-ru-config-values.yaml
+++ b/modules/462-loki/openapi/doc-ru-config-values.yaml
@@ -4,7 +4,7 @@ properties:
     description: |
       Имя storageClass'а, который использовать.
 
-      Если не указано — используется StorageClass существующей PVC Loki, а если PVC пока нет — используется или `global.storageClass`, или `global.discovery.defaultStorageClass`, а если и их нет — данные сохраняются в `emptyDir`.
+      Если не указано — используется StorageClass существующей PVC Loki, а если PVC пока нет — используется или  [глобальный StorageClass](../../deckhouse-configure-global.html#parameters-storageclass), или `global.discovery.defaultStorageClass`, а если и их нет — данные сохраняются в `emptyDir`.
 
       `false` — принудительное использование `emptyDir`. Удалить старый PVC и рестартануть Pod придется руками
 
