--- a/modules/005-external-module-manager/crds/doc-ru-external-module-source.yaml
+++ b/modules/005-external-module-manager/crds/doc-ru-external-module-source.yaml
@@ -37,3 +37,7 @@ spec:
           type: date
           format: date-time
           description: 'Время последней синхронизации с container registry.'
+        - name: msg
+          jsonPath: .status.message
+          type: string
+          description: 'Сообщение об ошибке.'
