--- a/modules/005-external-module-manager/crds/external-module-source.yaml
+++ b/modules/005-external-module-manager/crds/external-module-source.yaml
@@ -72,3 +72,7 @@ spec:
           type: date
           format: date-time
           description: 'When the repository was synchronized.'
+        - name: msg
+          jsonPath: .status.message
+          type: string
+          description: 'Error message if exists.'
