--- a/modules/030-cloud-provider-yandex/templates/namespace.yaml
+++ b/modules/030-cloud-provider-yandex/templates/namespace.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: d8-cloud-provider-yandex
-  {{- include "helm_lib_module_labels" (list . "prometheus.deckhouse.io/monitor-watcher-enabled" "true"  (dict "extended-monitoring.flant.com/enabled" "")) | nindent 2 }}
+  {{- include "helm_lib_module_labels" (list . (dict "prometheus.deckhouse.io/monitor-watcher-enabled" "true" "extended-monitoring.flant.com/enabled" "")) | nindent 2 }}
 ---
 {{- include "helm_lib_kube_rbac_proxy_ca_certificate" (list . (printf "d8-%s"  .Chart.Name)) }}
