--- a/modules/462-loki/openapi/doc-ru-config-values.yaml
+++ b/modules/462-loki/openapi/doc-ru-config-values.yaml
@@ -14,13 +14,11 @@ properties:
       Размер диска для хранения логов или размер PVC при указании параметра [storageClass](#parameters-storageclass).
 
       Вы должны самостоятельно указать необходимый размер диска для хранения логов за период, указанный в параметре `retentionPeriodHours`.
-      Loki не имеет возможности производить удаление старых данных автоматически при заполнении диска.
+      Loki не может удалять старые данные автоматически при заполнении диска.
 
       Занятый объем автоматически мониторится с помощью модуля [extended-monitoring](../340-extended-monitoring/configuration.html#namespaced-kubernetes-objects)
 
-      **ОСТОРОЖНО!**
-      Если диск с данными Loki переполнится - приложение перестанет работать. Вам следует выбрать необходимый баланс между значениями параметров
-      `retentionPeriodHours` и `diskSizeGigabytes`.
+      **ОСТОРОЖНО!**  Если диск с данными Loki переполнится, то приложение перестанет работать. Вам следует выбрать необходимый баланс между значениями параметров `retentionPeriodHours` и `diskSizeGigabytes`.
   retentionPeriodHours:
     description: |
       Сколько часов логи будут храниться прежде чем будут удалены.
