--- a/modules/340-extended-monitoring/templates/annotation-converter/mutatingwebhookconfiguration.yaml
+++ b/modules/340-extended-monitoring/templates/annotation-converter/mutatingwebhookconfiguration.yaml
@@ -27,6 +27,7 @@ webhooks:
     apiGroups: ["*"]
     apiVersions: ["*"]
     resources:
+    - namespaces
     - deployments
     - statefulsets
     - daemonsets
