--- a/modules/002-deckhouse/templates/namespace.yaml
+++ b/modules/002-deckhouse/templates/namespace.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: d8-monitoring
-  {{- include "helm_lib_module_labels" (list . (dict "prometheus.deckhouse.io/monitor-watcher-enabled" "true" extended-monitoring.flant.com/enabled" "")) | nindent 2 }}
+  {{- include "helm_lib_module_labels" (list . (dict "prometheus.deckhouse.io/monitor-watcher-enabled" "true" "extended-monitoring.flant.com/enabled" "")) | nindent 2 }}
 ---
 apiVersion: v1
 kind: Namespace
