--- a/modules/340-extended-monitoring/openapi/values.yaml
+++ b/modules/340-extended-monitoring/openapi/values.yaml
@@ -5,3 +5,23 @@ properties:
   internal:
     type: object
     default: {}
+    x-required-for-helm:
+    - webhookCert
+    properties:
+      webhookCert:
+        type: object
+        default: {}
+        x-required-for-helm:
+        - cert
+        - key
+        - ca
+        properties:
+          cert:
+            type: string
+            x-examples: ["YjY0ZW5jX3N0cmluZwo="]
+          key:
+            type: string
+            x-examples: ["YjY0ZW5jX3N0cmluZwo="]
+          ca:
+            type: string
+            x-examples: ["YjY0ZW5jX3N0cmluZwo="]
