--- a/modules/340-extended-monitoring/templates/annotation-converter/deployment.yaml
+++ b/modules/340-extended-monitoring/templates/annotation-converter/deployment.yaml
@@ -46,7 +46,7 @@ spec:
     metadata:
       annotations:
         checksum/extension-apiserver-authentication: {{ .Values.global.discovery.extensionAPIServerAuthenticationRequestheaderClientCA | sha256sum }}
-        checksum/certificate: {{ include (print .Template.BasePath "/webhook/secret-tls.yaml") . | sha256sum }}
+        checksum/certificate: {{ include (print .Template.BasePath "/annotation-converter/secret-tls.yaml") . | sha256sum }}
       labels:
         heritage: deckhouse
         module: {{ .Chart.Name }}
