--- a/modules/340-extended-monitoring/templates/annotation-converter/deployment.yaml
+++ b/modules/340-extended-monitoring/templates/annotation-converter/deployment.yaml
@@ -62,7 +62,7 @@ spec:
       containers:
       - name: webhook
         {{- include "helm_lib_module_container_security_context_read_only_root_filesystem" . | nindent 8 }}
-        image: {{ include "helm_lib_module_image" (list . "annotationsConverter") }}
+        image: {{ include "helm_lib_module_image" (list . "annotationConverter") }}
         args:
         - -tls-cert-file=/etc/webhook/certs/tls.crt
         - -tls-key-file=/etc/webhook/certs/tls.key
