--- a/modules/340-extended-monitoring/templates/annotation-converter/configmap.yaml
+++ b/modules/340-extended-monitoring/templates/annotation-converter/configmap.yaml
@@ -2,6 +2,6 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: d8-monitoring-migrated
+  name: d8-extended-monitoring-migrated
   namespace: d8-monitoring
   {{- include "helm_lib_module_labels" (list . (dict)) | nindent 2 }}
