--- a/modules/340-extended-monitoring/templates/annotation-converter/deployment.yaml
+++ b/modules/340-extended-monitoring/templates/annotation-converter/deployment.yaml
@@ -91,4 +91,4 @@ spec:
       volumes:
         - name: webhook-certs
           secret:
-            secretName: extended-monitoring
+            secretName: extended-monitoring-webhook-tls
