--- a/modules/002-deckhouse/templates/deployment.yaml
+++ b/modules/002-deckhouse/templates/deployment.yaml
@@ -195,5 +195,5 @@ spec:
       - name: external-modules
         hostPath:
           path: /var/lib/deckhouse/external-modules
-          type: Directory
+          type: DirectoryOrCreate
 
