--- a/modules/002-deckhouse/templates/deployment.yaml
+++ b/modules/002-deckhouse/templates/deployment.yaml
@@ -196,4 +196,7 @@ spec:
         hostPath:
           path: /var/lib/deckhouse/external-modules
           type: DirectoryOrCreate
-
+      - name: module-links
+        hostPath:
+          path: /var/lib/deckhouse/external-modules/modules
+          type: DirectoryOrCreate
